--- a/blueprints/Home/templates/index.html
+++ b/blueprints/Home/templates/index.html
@@ -18,11 +18,36 @@
             
             <div class="text-center">
                 <p class="text-secondary">Here are some endpoints that you could use:</p>
-                <ul>
-                    <li>A</li>
-                    <li>B</li>
-                    <li>C</li>
-                </ul>
+
+                <!-- Table -->
+                <table class="d-flex justify-content-center">
+                    <tr>
+                        <th class="p-3">Method</th>
+                        <th class="p-3">Endpoint</th>
+                    </tr>
+                    <tr>
+                        <th>GET</th>
+                        <td><a href="/api/fakes" target="_blank">/api/fakes</a></td>
+                    </tr>
+                    <tr>
+                        <th>GET</th>
+                        <td><a href="/api/fakes/1" target="_blank">/api/fakes/1</a></td>
+                    </tr>
+                    <tr>
+                        <th>POST</th>
+                        <td>/api/fakes</td>
+                    </tr>
+                    <tr>
+                        <th>PUT</th>
+                        <td>/api/fakes/1</td>
+                    </tr>
+                    <tr>
+                        <th>DELETE</th>
+                        <td>/api/fakes/1</td>
+                    </tr>
+                </table>
+                <!-- Table -->
+
             </div>
 
         </div>
