--- a/blueprints/Home/templates/base.html
+++ b/blueprints/Home/templates/base.html
@@ -23,6 +23,10 @@
         ul{
             list-style-type: none;
         }
+        a{
+            text-decoration: none;
+            color: black;
+        }
     </style>
 </head>
 <body>
